2008-09-10  Johannes Schmid  <jhs@gnome.org>

	* plugins/sourceview/sourceview-io.c (sourceview_io_init),
	(on_read_finished):
	* plugins/sourceview/sourceview-io.h:
	Fixed a problem with async file loading. (Remember never to use
	static variables in method that could be used by different objects...)
	
	* plugins/sourceview/sourceview.c (on_open_failed),
	(on_save_failed):
	Fixed some (new) warnings

2008-09-09  Rob Bradford  <rob@linux.intel.com>

	* libanjuta/anjuta-launcher.c (anjuta_launcher_fork):
	Fix #551527: Memory leak in anjuta-launcher.c

2008-09-08  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/document-manager/anjuta-docman.c:
	Fix #551261 Crash when closing a moved editor

2008-09-06  Sébastien Granjoux  <seb.sfo@free.fr>

	* manuals/reference/libanjuta/libanjuta-docs.sgml,
	manuals/reference/libanjuta/Makefile.am,
	manuals/reference/libanjuta/libanjuta-sections.txt,
	manuals/reference/libanjuta/libanjuta.types,
	libanjuta/interfaces/libanjuta.idl,
	libanjuta/interfaces/anjuta-idl-compiler.pl,
	libanjuta/anjuta-plugin-description.h,
	libanjuta/anjuta-command.c,
	libanjuta/anjuta-preferences.c,
	libanjuta/anjuta-preferences-dialog.c,
	libanjuta/anjuta-ui.c:
	Fix libanjuta API documentation

2008-09-03  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/editor/text_editor.c:
	Fix #549857 - goto-line does not provide a mark on left side of editor

2008-09-03  Johannes Schmid  <jhs@gnome.org>

	* AUTHORS:
	* plugins/symbol-browser/images/*
	* plugins/symbol-browser/an_symbol_info.c (sv_load_symbol_pixbufs):
	* plugins/symbol-db/symbol-db-view.c:
	Imported new symbol icons from MonoDevelop. The old one (originally in
	SharpDevelop are very close to the Visual Studio icons which could cause
	problems. The new icons are Tango icons and are MIT/X11 licensed.

2008-09-02  James Liggett  <jrliggett@cox.net>

	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/git/git-command.c: