@@ -19,6 +19,9 @@ AC_SUBST(ANJUTA_MICRO_VERSION, anjuta_micro_version)
 AC_DEFINE(ANJUTA_VERSION, anjuta_version, [Anjuta version])
 AC_SUBST(ANJUTA_VERSION)
 
+ANJUTA_VERSION=anjuta_version
+AC_SUBST(ANJUTA_VERSION)
+
 GLIB_REQUIRED=2.14.0
 GOBJECT_REQUIRED=2.8.0
 GMODULE_REQUIRED=2.8.0
